--- a/MarsArchive/Base.lproj/LaunchScreen.storyboard
+++ b/MarsArchive/Base.lproj/LaunchScreen.storyboard
@@ -1,50 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="po6-oI-erl">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Michroma.ttf">
+            <string>Michroma</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="EHf-IW-A2E">
+        <scene sceneID="n09-TU-K8Z">
             <objects>
-                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                <viewController id="po6-oI-erl" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
-                        <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
+                        <viewControllerLayoutGuide type="top" id="XhG-Md-hQX"/>
+                        <viewControllerLayoutGuide type="bottom" id="V29-sS-MJa"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="view" contentMode="scaleToFill" id="tbN-15-B5p">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="yJq-hn-Hvs">
-                                <rect key="frame" x="26" y="50" width="323" height="323"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading Rover Data" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="AXI-gH-UeE">
+                                <rect key="frame" x="46" y="265.5" width="228" height="29"/>
+                                <fontDescription key="fontDescription" name="Michroma" family="Michroma" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="6Mm-Pz-2jm">
+                                <rect key="frame" x="141.5" y="309.5" width="37" height="37"/>
+                            </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="THE MARS ARCHIVE" textAlignment="center" lineBreakMode="clip" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="3h3-UP-jK5">
+                                <rect key="frame" x="30" y="18.5" width="261" height="220"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="yJq-hn-Hvs" secondAttribute="height" multiplier="1:1" id="7yO-QD-qBG"/>
+                                    <constraint firstAttribute="height" constant="220" id="742-ja-hiq"/>
                                 </constraints>
-                            </imageView>
+                                <fontDescription key="fontDescription" name="Michroma" family="Michroma" pointSize="50"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="yJq-hn-Hvs" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="10" id="1Wt-Nv-o2B"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="yJq-hn-Hvs" secondAttribute="trailing" constant="10" id="efe-J1-C11"/>
-                            <constraint firstItem="yJq-hn-Hvs" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" constant="50" id="pIv-Gs-JOb"/>
-                            <constraint firstItem="yJq-hn-Hvs" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="r6n-5e-KJT"/>
+                            <constraint firstItem="6Mm-Pz-2jm" firstAttribute="top" secondItem="AXI-gH-UeE" secondAttribute="bottom" constant="15" id="5ow-wH-YGX"/>
+                            <constraint firstItem="AXI-gH-UeE" firstAttribute="centerY" secondItem="tbN-15-B5p" secondAttribute="centerY" constant="40" id="HUW-my-Sl3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="AXI-gH-UeE" secondAttribute="trailing" constant="30" id="J7d-o0-8XV"/>
+                            <constraint firstItem="3h3-UP-jK5" firstAttribute="leading" secondItem="tbN-15-B5p" secondAttribute="leadingMargin" constant="14" id="RFM-gc-PkT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="3h3-UP-jK5" secondAttribute="trailing" constant="13" id="RS9-1c-E4m"/>
+                            <constraint firstItem="AXI-gH-UeE" firstAttribute="top" secondItem="3h3-UP-jK5" secondAttribute="bottom" constant="27" id="YsY-he-1k4"/>
+                            <constraint firstItem="AXI-gH-UeE" firstAttribute="leading" secondItem="tbN-15-B5p" secondAttribute="leadingMargin" constant="30" id="rh6-PA-Iis"/>
+                            <constraint firstItem="6Mm-Pz-2jm" firstAttribute="centerX" secondItem="tbN-15-B5p" secondAttribute="centerX" id="zCF-pU-hDd"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="6Mm-Pz-2jm" id="2wj-kr-3jA"/>
+                        <outlet property="loadingLabel" destination="AXI-gH-UeE" id="TEt-Xq-aDz"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y90-IK-n1O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="-290.39999999999998" y="166.8665667166417"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="Icon" width="512" height="512"/>
-    </resources>
 </document>
